Delete Docker-cpose file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-
-# MySQL on Railway Configuration
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&allowPublicKeyRetrieval=true
+# ✅ MySQL Railway - PUBLIC Connection
+spring.datasource.url=jdbc:mysql://tramway.proxy.rlwy.net:47121/railway?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=IeSnYrKzeuOiIJkwgBpAJaPTZNhGIfYw
+spring.datasource.password=IeSnYrKzeuOilJkwgBpAJaPTZNhGIfYw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.docker.compose.enabled=false
 
-# Hibernate / JPA
+# ✅ Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ===============================
-# Server port (optional)
-# ===============================
+# ✅ Optional: Run app on specific port
 server.port=8080
